# pace_2024

./: .clang-format  .gitignore  CITATION.cff  CMakeLists.txt  LICENSE.md  README.md  make_submission.sh  test.sh
data/: cycle_8_shuffled.gr  grid_9_shuffled.gr  ladder_4_4_shuffled.gr  matching_4_4.gr  path_9_sorted.gr  plane_5_6.gr
data/exact-public/: 1.gr  10.gr  100.gr  11.gr  12.gr  13.gr  14.gr  15.gr  16.gr  17.gr  18.gr  19.gr  2.gr  20.gr  21.gr  22.gr  23.gr  24.gr  25.gr  26.gr  27.gr  28.gr  29.gr  3.gr  30.gr  31.gr  32.gr  33.gr  34.gr  35.gr  36.gr  37.gr  38.gr  39.gr  4.gr  40.gr  41.gr  42.gr  43.gr  44.gr  (+60 more)
data/heuristic_public/: 1.gr  10.gr  100.gr  11.gr  12.gr  13.gr  14.gr  15.gr  16.gr  17.gr  18.gr  19.gr  2.gr  20.gr  21.gr  22.gr  23.gr  24.gr  25.gr  26.gr  27.gr  28.gr  29.gr  3.gr  30.gr  31.gr  32.gr  33.gr  34.gr  35.gr  36.gr  37.gr  38.gr  39.gr  4.gr  40.gr  41.gr  42.gr  43.gr  45.gr  (+59 more)
data/tiny/: complete_4_5.gr  cycle_8_sorted.gr  ladder_4_4_sorted.gr  path_9_shuffled.gr  star_6.gr  tree_6_10.gr  website_20.gr
helper/: .gitignore  check_solution.py  compare_heuristic_solutions.py  compare_solutions.py  current_points.py  data_reduction.py  disprove_rr2_same_border.py  requirements.txt  smac_runner.py  test.py  test_fes_heuristic.py  wrapper_script.py
helper/bruteforcer/: bruteforce_test.py  random_graph_generator.py  simple_gurobi_solver.py
helper/notebooks/: crossing_matrix.ipynb  data_reduction.ipynb
helper/notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
helper/plots/: compare_heuristic_solutions.py  compare_lower_bound_solutions.py  compare_two_solutions.py  utils.py
src/crossing_matrix/: main.cpp
src/data_reduction/: data_reduction_rules.cpp  data_reduction_rules.hpp  main.cpp
src/exact/: exact.cpp  exact.h  exact_solver.cpp  exact_solver.h  feedback_edge_set_heuristic.cpp  feedback_edge_set_heuristic.hpp  feedback_edge_set_heuristic_test.cpp  feedback_edge_set_ilp.cpp  feedback_edge_set_ilp.hpp  feedback_edge_set_solver.cpp  feedback_edge_set_solver.hpp  main.cpp
src/heuristic_solver/: cheap_heuristics.cpp  cheap_heuristics.h  cheap_heuristics.hpp  genetic_algo.cpp  genetic_algo.hpp  genetic_algorithm.cpp  genetic_algorithm.h  genetic_algorithm.hpp  greedy_insert_solver.cpp  greedy_insert_solver.h  heuristic.hpp  heuristic_solver.cpp  heuristic_solver.hpp  local_search.cpp  local_search.h  local_search.hpp  main.cpp  mean_position_heuristic.cpp  mean_position_heuristic.hpp  median_position_heuristic.cpp  median_position_heuristic.hpp
src/ilp_solver/: cp_solver.hpp  ilp_solver.cpp  ilp_solver.hpp  main.cpp  optimization_solver.hpp
src/lb/: lb_solver.cpp  lb_solver.hpp  main.cpp  simple_lb.cpp  simple_lb.hpp
src/pace_graph/: bool_crossing_matrix.cpp  bool_crossing_matrix.hpp  crossing_matrix.cpp  crossing_matrix.hpp  directed_graph.cpp  directed_graph.hpp  order.hpp  pace_graph.cpp  pace_graph.hpp  relation.hpp  segment_tree.cpp  segment_tree.hpp  solver.cpp  solver.hpp
tests/: data_reductions.cpp  directed_graph.cpp  fes_lb_test.cpp  pace_graph.cpp
